fix: resolve unresolved merge markers from 7d3e5c9 cherry-pick, restore JDK 8 compatibility
- HermesClientConfig: keep composed http/cli config design, add startup-check flags
- HermesClient: integrate startup checks into composed-config constructor
- handleCliCheckFailed: use config.getCli().getExecutable() (composed config)
- URLEncoder: use String overload (JDK 8 compatible)
- remove stray duplicated close() leftover